# ferreira-tb.github.io

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  404.html  CNAME  Cargo.toml  dprint.json  eslint.config.js  eslint.config.ts  index.d.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  tailwind.config.js  taze.config.js  taze.config.ts  tsconfig.json  vite.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: deploy.yml
cli/: Cargo.toml
cli/src/: main.rs  repository.rs
public/: repos.json
public/data/: repos.json
scripts/: build.ps1  deploy.ps1  fetch.ps1  repo.py
src/: App.vue  index.ts  main.ts
src/assets/: icons.ts  style.css
src/components/: Button.vue  Card.vue  Icon.vue  ProjectCard.vue
src/components/icons/: IconMoon.vue  IconSun.vue
src/composables/: height.ts
src/lib/: icons.ts  repository.ts
src/router/: index.ts
src/types/: index.d.ts
src/utils/: docs.ts  icons.ts  repository.ts
src/views/: Home.vue  HomeView.vue
