[workspace]
members = ["cli"]
resolver = "2"

[workspace.package]
homepage = "https://github.com/ferreira-tb/ferreira-tb.github.io"
repository = "https://github.com/ferreira-tb/ferreira-tb.github.io"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2021"
readme = "README.md"
