[package]
name = "cli"
version = "0.1.4"
publish = false

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[package.readme]
workspace = true

[dependencies]
anyhow = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.clap]
version = "4.4"
features = ["derive"]
